# trianglebin

./: .gitignore  CMakeLists.txt  MinGW64.cmake  dxutil.cpp  dxutil.h  main.cpp  scene.cpp
imgui/: imgui_impl_dx11.cpp
